# tardis_web_app_2

./: .gitignore  README.md  UI_QUICK_REFERENCE.md  UI_SPEC.md  echo_seg_app.spec  environment.yml  headless.sh  make_echogram_image.py  package-lock.json  package.json  pyproject.toml  requirements-cpu.txt  requirements.txt  vite.config.js
.github/workflows/: deploy-pages.yml
analysis/: plot_echogram_predictions.py  prediction_exports.py
example_aris/: 2018-06-10-JD161_RightNear_Stratum1_Set1_RN_2018-06-10_220003.json
fisheye_loading/: beams.py  compute_bg_subtraction.py  echogram.py  pyARIS.py  pyDIDSON.py  pyDIDSON_format.py  run_with_threads.py
scripts/: build_cpu_dist.ps1  build_cpu_dist.sh  export_python_echogram.py  verify-browser-decoder.mjs
user_pipeline/: __init__.py  aris_to_detections.py  batch.py  batch_cli.py  config.py  pipeline.py  plot_in_image_and_csv.py
utils/: submask_utils.py  yolo_segmentation.py
web/: index.html
web/src/: main.js  styles.css
web/src/detections/: exports.js
web/src/inference/: yoloSegmentation.js
web/src/render/: classColours.js  imageData.js  overlay.js  visualizeEchogram.js
web/src/sonar/: decoder.js
weights/: skim_checkpoint.py
